# webycash-server

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.bench  Dockerfile.flavor  INITIAL_VISION.md  LICENSE  README.md  ROADMAP.md  docker-compose.local.yml  docker-compose.yml
.github/workflows/: ci.yml
benches/: redis_raw.py  server_bench.py
config/: production.toml  redis.conf  testnet.toml
crates/: README.md
crates/aluvm-runtime/: Cargo.toml
crates/aluvm-runtime/src/: lib.rs
crates/asset-core/: Cargo.toml
crates/asset-core/src/: amount.rs  lib.rs
crates/asset-rgb/: Cargo.toml
crates/asset-rgb/src/: lib.rs  token.rs
crates/asset-rgb/src/htlc/: mod.rs  predicate.rs  state.rs  vm.rs
crates/asset-voucher/: Cargo.toml
crates/asset-voucher/src/: lib.rs  token.rs
crates/asset-webcash/: Cargo.toml
crates/asset-webcash/src/: lib.rs  token.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/compute/: Cargo.toml
crates/compute/src/: lib.rs
crates/conformance/: Cargo.toml
crates/conformance/fixtures/webcash_org_production/: README.md  get_stats_404.json  get_target.json  get_terms_text.json  post_health_check_known.json  post_health_check_malformed.json  post_health_check_unknown.json  post_replace_empty.json
crates/conformance/src/: lib.rs
crates/conformance/tests/: fuzz_parsers.rs  live_webcash_org.rs  parser_bench.rs  production_fixture_invariants.rs  record_codec_props.rs  server_rgb21_htlc.rs  server_rgb_collectible_lifecycle.rs  server_rgb_dynamodb_lifecycle.rs  server_rgb_full_lifecycle.rs  server_rgb_htlc_swap.rs  server_voucher_dynamodb_lifecycle.rs  server_voucher_full_lifecycle.rs  server_voucher_issue.rs  server_voucher_pgp_issue.rs  server_webcash_dynamodb_lifecycle.rs  server_webcash_full_lifecycle.rs  server_webcash_target.rs  storage_key_props.rs  throughput_bench.rs  wire_format_props.proptest-regressions  wire_format_props.rs
crates/conformance/tests/common/: mod.rs
crates/macros/: Cargo.toml
crates/macros/src/: gen_server.rs  lib.rs  supervisor.rs
crates/mining/: Cargo.toml
crates/mining/src/: lib.rs
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs  parsers.rs
crates/server/: Cargo.toml
crates/server-core/: Cargo.toml
crates/server-core/src/: lib.rs
crates/server-rgb/: Cargo.toml
crates/server-rgb-collectible/: Cargo.toml
crates/server-rgb-collectible/src/: main.rs
crates/server-rgb/src/: main.rs
crates/server-voucher/: Cargo.toml
crates/server-voucher/src/: main.rs
crates/server-webcash/: Cargo.toml
crates/server-webcash/src/: main.rs
crates/server/benches/: compute.rs  throughput.rs
crates/server/src/: config.rs  lib.rs  main.rs
crates/server/src/actors/: batcher.rs  ledger.rs  miner.rs  mod.rs  stats.rs  supervisor.rs
crates/server/src/api/: burn.rs  health_check.rs  mining_report.rs  mod.rs  replace.rs  router.rs  service.rs  stats.rs  target.rs  terms.rs
crates/server/src/compute/: cpu.rs  cuda.rs  mod.rs  wgpu_compute.rs
crates/server/src/db/: dynamodb.rs  foundationdb.rs  mod.rs  redis.rs  redis_fdb.rs
crates/server/src/effects/: interpreter.rs  mod.rs  replace.rs
crates/server/src/protocol/: amount.rs  mining.rs  mod.rs  token.rs
crates/server/tests/: integration.rs  pentest.rs
crates/storage/: Cargo.toml
crates/storage/src/: dynamodb_backend.rs  fdb_backend.rs  lib.rs  redis_backend.rs  redis_fdb_backend.rs
deploy/: LOCAL_INTEGRATION.md
deploy/docker/: Dockerfile.dpdk
deploy/k8s/dpdk/: device-plugin.yaml  namespace.yaml  network-attachment.yaml  redis.yaml  server.yaml
docs/: deployment.md  referee-zkp-based-swap.md  roadmap.md
referee/: Cargo.toml
referee/docs/: README.md  api.md  architecture.md  client-implementation.md  deployment.md  hook-contract.md  musig2-ceremony.md  push-notification.md  transaction-model.md  trust-model.md  zkp-circuits.md
referee/src/: audit.rs  config.rs  error.rs  lib.rs  main.rs  musig2.rs  push.rs  sign.rs  transaction.rs  zkp.rs
referee/src/api/: mod.rs  orchestrator.rs  router.rs
referee/src/audit/: dynamodb.rs  fdb.rs  mod.rs  redis.rs
referee/src/clients/: mod.rs
referee/src/state/: mod.rs  phases.rs  transitions.rs  types.rs
referee/src/store/: dynamodb.rs  fdb.rs  mod.rs  redis.rs
referee/tests/: cancel_and_history.rs  dynamodb_e2e.rs  orchestrator_e2e.rs
src/: lib.rs
terraform/webcash-server-k8s/: README.md  main.tf  outputs.tf  variables.tf
terraform/webcash-server-k8s/templates/: config.toml.tpl
