[workspace]
resolver = "2"
members = [
    # Existing
    "crates/server",
    "crates/macros",

    # New (M0 scaffolding for the asset-gated refactor)
    "crates/proto",
    "crates/asset-core",
    "crates/asset-webcash",
    "crates/asset-rgb",
    "crates/asset-voucher",
    "crates/auth",
    "crates/storage",
    "crates/compute",
    "crates/mining",
    "crates/aluvm-runtime",
    "crates/server-core",
    "crates/server-webcash",
    "crates/server-rgb",
    "crates/server-voucher",
    "crates/conformance",
]

[workspace.package]
version = "0.2.3"
edition = "2021"
rust-version = "1.85"
license = "MIT"
authors = ["Webycash Developers"]
repository = "https://github.com/webycash/webycash-server"

[workspace.dependencies]
# HTTP (hyper only — no actix-web)
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http2"] }
http = "1"
http-body-util = "0.1"
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Actor framework (ractor — Erlang-inspired, native tokio)
ractor = "0.12"

# Parser combinators
nom = "7"

# Crypto
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
ed25519-dalek = "2"

# Databases
aws-config = "1"
aws-sdk-dynamodb = "1"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
foundationdb = { version = "0.10", features = ["embedded-fdb-include", "fdb-7_3"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
toml = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Proc macros
syn = { version = "2", features = ["full", "extra-traits", "parsing"] }
quote = "1"
proc-macro2 = "1"

# Misc
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
tokio-stream = "0.1"

# Testing
proptest = "1"

# Internal crate paths (workspace members reference each other through these)
webycash-macros = { path = "crates/macros" }
webycash-proto = { path = "crates/proto" }
webycash-asset-core = { path = "crates/asset-core" }
webycash-asset-webcash = { path = "crates/asset-webcash" }
webycash-asset-rgb = { path = "crates/asset-rgb" }
webycash-asset-voucher = { path = "crates/asset-voucher" }
webycash-auth = { path = "crates/auth" }
webycash-storage = { path = "crates/storage" }
webycash-compute = { path = "crates/compute" }
webycash-mining = { path = "crates/mining" }
webycash-aluvm-runtime = { path = "crates/aluvm-runtime" }
webycash-server-core = { path = "crates/server-core" }
