[workspace]
resolver = "2"

# Default cargo build builds only the Webcash binary. The other rails are
# opt-in by explicit -p selection:
#
#   cargo build                              → server-webcash (default)
#   cargo build -p webycash-server-rgb       → adds RgbFungible binary
#   cargo build -p webycash-server-rgb-collectible → adds RgbCollectible binary
#   cargo build -p webycash-server-voucher   → adds Voucher binary
#   cargo build -p referee                   → adds the referee binary
#                                              (Webcash ↔ ARK swap helper;
#                                              docs/referee-zkp-based-swap.md §4)
#   cargo build --workspace                  → builds everything
#
# Library sub-crates (proto, asset-core, auth, storage, compute, mining,
# asset-webcash, asset-rgb, asset-voucher, server-core) are inlined as modules
# of the root "." crate via #[path] — their Cargo.toml files are deleted so
# cargo packaging can pick up the source trees.
# aluvm-runtime is a SEPARATE published crate (webylib WASM client-side only;
# the server uses pure-Rust HTLC predicates and never runs AluVM).
default-members = ["crates/server-webcash"]

members = [
    # Root published library crate (inlines 10 sub-crate source trees)
    ".",
    # Published separately — WASM client-side AluVM runtime for webylib
    "crates/aluvm-runtime",
    # Legacy monolithic server (ractor-based; workspace-only, publish = false)
    "crates/server",
    # Proc-macro helper (workspace-only, publish = false)
    "crates/macros",
    # Flavor binaries (workspace-only, publish = false)
    "crates/server-webcash",
    "crates/server-rgb",
    "crates/server-rgb-collectible",
    "crates/server-voucher",
    # Wire-format conformance test suite (workspace-only, publish = false)
    "crates/conformance",
    # Webcash ↔ Bitcoin ARK swap helper (workspace-only, publish = false)
    "referee",
]

[workspace.package]
version = "0.3.1"
edition = "2021"
rust-version = "1.91"
license = "MIT"
authors = ["Webycash Developers"]
repository = "https://github.com/webycash/webycash-server"

[workspace.dependencies]
# HTTP (hyper only — no actix-web)
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http2"] }
http = "1"
http-body-util = "0.1"
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Actor framework (ractor — Erlang-inspired, native tokio)
ractor = "0.12"

# Parser combinators
nom = "7"

# Crypto
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
ed25519-dalek = "2"
hmac = "0.12"

# Databases
aws-config = "1"
aws-sdk-dynamodb = "1"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
foundationdb = { version = "0.10", features = ["embedded-fdb-include", "fdb-7_3"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
toml = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Proc macros
syn = { version = "2", features = ["full", "extra-traits", "parsing"] }
quote = "1"
proc-macro2 = "1"

# Misc
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
tokio-stream = "0.1"

# Testing
proptest = "1"

# Published crates
webycash-server = { path = ".", version = "0.3.1", default-features = false }
webycash-aluvm-runtime = { path = "crates/aluvm-runtime" }

# Internal crates (workspace-only, not published)
webycash-macros = { path = "crates/macros" }

# ─────────────────────────────────────────────────────────────────────────────
# Root published crate (webycash-server library)
# ─────────────────────────────────────────────────────────────────────────────

[package]
name = "webycash-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "webycash server library — asset-gated ledger (webcash, RGB, voucher) with Redis/DynamoDB/FDB backends"
documentation = "https://docs.rs/webycash-server"
keywords = ["webcash", "payments", "bearer-cash", "rgb", "ledger"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]
include = [
    "src/**/*.rs",
    "crates/proto/src/**/*.rs",
    "crates/asset-core/src/**/*.rs",
    "crates/auth/src/**/*.rs",
    "crates/storage/src/**/*.rs",
    "crates/compute/src/**/*.rs",
    "crates/mining/src/**/*.rs",
    "crates/asset-webcash/src/**/*.rs",
    "crates/asset-rgb/src/**/*.rs",
    "crates/asset-voucher/src/**/*.rs",
    "crates/server-core/src/**/*.rs",
    "LICENSE",
    "README.md",
]

[lib]
name = "webycash_server"
path = "src/lib.rs"

[features]
default = ["webcash", "redis"]
webcash = []
rgb = []
rgb-runtime = ["rgb", "dep:strict_types"]
voucher = []
openpgp = ["dep:pgp"]
redis = ["dep:redis"]
dynamodb = ["dep:aws-config", "dep:aws-sdk-dynamodb", "dep:serde_dynamo"]
fdb = ["dep:foundationdb"]
redis-fdb = ["redis", "fdb"]

[dependencies]
# Core shared
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
nom = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }

# Server + async
tokio = { workspace = true }
ractor = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
bytes = { workspace = true }

# HTTP
hyper = { workspace = true }
hyper-util = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }

# Optional: OpenPGP V4 cert parsing in auth module
pgp = { version = "0.19", optional = true }

# Optional: strict-types for RGB v2 contract schema (rgb-runtime feature)
strict_types = { version = "2.9", optional = true }

# Optional storage backends
redis = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }
aws-sdk-dynamodb = { workspace = true, optional = true }
serde_dynamo = { workspace = true, optional = true }
foundationdb = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
