[package]
name = "referee"
description = "Webcash ↔ Bitcoin ARK swap helper. ZKP-verified, MuSig2-cosigned, non-custodial. See webycash-server/docs/referee-zkp-based-swap.md §4 and webycash-server/referee/docs/."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "referee"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[features]
default = []
# Real Groth16 verifier (arkworks BN254). Off by default so the build
# matrix stays fast; toggling on enables the production verifier.
zkp-arkworks = ["dep:ark-groth16", "dep:ark-bn254", "dep:ark-serialize", "dep:ark-ec", "dep:ark-ff"]
# Real MuSig2 signer over secp256k1 (BIP327 via the `musig2` crate).
musig2-real = ["dep:musig2", "dep:secp256k1"]
# Storage backends. Mirror the asset-server pattern (Redis /
# DynamoDB / FoundationDB) so the referee can be deployed against the
# same data layer as the rest of the stack.
redis = ["dep:redis"]
dynamodb = ["dep:aws-config", "dep:aws-sdk-dynamodb"]
fdb = ["dep:foundationdb"]

[dependencies]
# Asset-side types we share with the rest of webycash-server.
webycash-server = { workspace = true, features = ["rgb"] }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# HTTP — Axum is the chosen framework (small + typed)
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# HTTP client (push webhook caller, RGB-server / Webcash client wraps)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Crypto
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }

# Optional ZKP backend
ark-groth16 = { version = "0.5", optional = true }
ark-bn254 = { version = "0.5", optional = true }
ark-serialize = { version = "0.5", optional = true }
ark-ec = { version = "0.5", optional = true }
ark-ff = { version = "0.5", optional = true }

# Optional MuSig2 backend (BIP327)
musig2 = { version = "0.2", optional = true, features = ["secp256k1"] }
secp256k1 = { version = "0.30", optional = true, features = ["rand", "global-context"] }

# Optional storage backends — match the asset-server matrix.
redis = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }
aws-sdk-dynamodb = { workspace = true, optional = true }
foundationdb = { workspace = true, optional = true }

# IDs + timestamps
uuid = { workspace = true }
chrono = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Errors
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
