[package]
name = "webycash-aluvm-runtime"
description = "AluVM execution context for webylib wallet-rgb (WASM client-side RGB contract validation). Compiled natively for tests; compiled to WASM for webylib."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
aluvm = "0.12"
