[package]
name = "webycash-asset-rgb"
description = "Asset implementation for RGB (RGB20 fungible/splittable, RGB21 NFT/non-splittable). Issuer-namespaced. Uses official LNP/BP + UBIDECO crates."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
# Enable real rgb-core/aluvm integration. Off by default until upstream API
# settles; flip on for a deployment that needs full AluVM transition checks.
rgb-runtime = ["dep:aluvm", "dep:strict_types"]

[dependencies]
webycash-asset-core = { workspace = true }
webycash-proto = { workspace = true }
webycash-storage = { workspace = true }
webycash-aluvm-runtime = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
nom = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
# Real RGB ecosystem (gated by `rgb-runtime` feature). Enable to wire
# validate_transfer + verify_issuance into rgb-core/aluvm. Compilation
# may fail on certain platforms (notably WASM) due to upstream C deps;
# the WASM viability gate stays a follow-up milestone.
aluvm = { version = "0.12", optional = true }
strict_types = { version = "2.9", optional = true }
