[package]
name = "webycash-asset-rgb"
description = "Asset implementation for RGB — RGB20 (splittable) and RGB21 (non-splittable, licensable: Perpetual or Royalties License). Issuer-namespaced. Uses official LNP/BP + UBIDECO crates."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
# Enable real rgb-core/rgb-std/strict-types integration (full schema
# authoring with bytecode-resident predicates). v1 ships the HTLC
# schema as a Rust predicate gated through AluVM; this feature reserves
# the slot for v2.
rgb-runtime = ["dep:strict_types"]

[dependencies]
webycash-asset-core = { workspace = true }
webycash-proto = { workspace = true }
webycash-storage = { workspace = true }
webycash-aluvm-runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
nom = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
# AluVM is on by default — the HTLC schema in `htlc/` runs the
# minimal accept/reject script through it on every `/replace` of an
# HTLC-locked output. See docs/referee-zkp-based-swap.md.
aluvm = "0.12"
# Strict-types-encoded state-and-witness schema lands when the v2
# bytecode-resident contract replaces the v1 Rust predicate.
strict_types = { version = "2.9", optional = true }
