[package]
name = "webycash-asset-webcash"
description = "Asset implementation for Webcash. Wire-protocol-frozen — must remain bit-for-bit compatible with webcash.org production."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
webycash-asset-core = { workspace = true }
webycash-proto = { workspace = true }
webycash-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
nom = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
