[package]
name = "webycash-auth"
description = "Issuer authentication via OpenPGP V4 Ed25519 fingerprints; nonce cache, signature verification, signing helpers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
webycash-asset-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
ed25519-dalek = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
# rpgp added in M3 (issuer signature verification path)
