[package]
name = "webycash-auth"
description = "Issuer authentication via OpenPGP V4 Ed25519 fingerprints; nonce cache, signature verification, signing helpers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
# Enable OpenPGP V4 cert parsing via the pgp (rpgp) crate. With this off,
# IssuerRegistry only accepts raw 32-byte Ed25519 verifying keys.
openpgp = ["dep:pgp"]

[dependencies]
webycash-asset-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
ed25519-dalek = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
# Pure-Rust OpenPGP. WASM-friendly. Used to parse V4 certs and extract
# their primary Ed25519 verifying key + fingerprint.
pgp = { version = "0.19", optional = true }

[dev-dependencies]
pgp = "0.19"
rand = "0.8"
proptest = { workspace = true }
