[package]
name = "webycash-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Procedural macros for webycash-server: gen_server generates ractor Actor boilerplate from handler methods"

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
