[package]
name = "webycash-server-core"
description = "Generic Server<A: Asset> — hyper service stack, middleware, endpoint dispatch, replace/transfer/mint flows. The asset-flavor binaries instantiate this with a concrete A."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
webycash-asset-core = { workspace = true }
webycash-proto = { workspace = true }
webycash-storage = { workspace = true, features = ["redis"] }
webycash-compute = { workspace = true }
webycash-mining = { workspace = true }
webycash-auth = { workspace = true }
webycash-macros = { workspace = true }
ed25519-dalek = { workspace = true }
# Note: AluVM is intentionally NOT pulled in here. RGB contract validation
# happens client-side in webylib-wasm/contract.rs. The server is a
# single-use-seal registry — its only job is to atomically swap input
# secrets' public hashes for output secrets' public hashes within a
# (contract_id, issuer_fp) namespace, and (for splittable assets) verify
# amount conservation. Real AluVM execution against a contract's
# transition data lives in the wallet, where the bytecode + ancestor
# state are accessible.

hyper = { workspace = true }
hyper-util = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
ractor = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

