[package]
name = "webycash-server-rgb-collectible"
description = "RGB21 (collectible) flavor of the asset-gated server. Non-splittable; licensable as Perpetual or Royalties License. /replace enforces 1:1 transfer."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "webycash-server-rgb-collectible"
path = "src/main.rs"

[features]
default = []
fdb = ["webycash-server/fdb", "webycash-server/redis-fdb", "dep:foundationdb"]

[dependencies]
webycash-server = { workspace = true, features = ["rgb", "openpgp", "redis", "dynamodb"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
foundationdb = { workspace = true, optional = true }
