[package]
name = "webycash-server-rgb"
description = "RGB flavor of the asset-gated server. Issuer-namespaced, AluVM-validated, supports RGB20 (splittable) and RGB21 (non-splittable)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "webycash-server-rgb"
path = "src/main.rs"

[features]
default = []
fdb = ["webycash-storage/fdb", "webycash-storage/redis-fdb", "dep:foundationdb"]

[dependencies]
webycash-server-core = { workspace = true }
webycash-asset-rgb = { workspace = true }
webycash-auth = { workspace = true, features = ["openpgp"] }
webycash-mining = { workspace = true }
webycash-storage = { workspace = true, features = ["redis", "dynamodb"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
foundationdb = { workspace = true, optional = true }
