[package]
name = "webycash-server-rgb"
description = "RGB flavor of the asset-gated server. Issuer-namespaced, AluVM-validated, supports RGB20 (splittable) and RGB21 (non-splittable)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "webycash-server-rgb"
path = "src/main.rs"

[features]
default = []
fdb = ["webycash-server/fdb", "webycash-server/redis-fdb", "dep:foundationdb"]

[dependencies]
webycash-server = { workspace = true, features = ["rgb", "openpgp", "redis", "dynamodb"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
foundationdb = { workspace = true, optional = true }
