[package]
name = "webycash-server-voucher"
description = "Voucher flavor of the asset-gated server. Always-splittable, issuer-namespaced bearer credits."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "webycash-server-voucher"
path = "src/main.rs"

[features]
default = []
fdb = ["webycash-server/fdb", "webycash-server/redis-fdb", "dep:foundationdb"]

[dependencies]
webycash-server = { workspace = true, features = ["voucher", "openpgp", "redis", "dynamodb"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
foundationdb = { workspace = true, optional = true }
