[package]
name = "webycash-server-webcash"
description = "Webcash flavor of the asset-gated server. Wire-protocol frozen against webcash.org production."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "webycash-server-webcash"
path = "src/main.rs"

[features]
default = []
fdb = ["webycash-storage/fdb", "webycash-storage/redis-fdb", "dep:foundationdb"]

[dependencies]
webycash-server-core = { workspace = true }
webycash-asset-webcash = { workspace = true }
webycash-mining = { workspace = true }
webycash-storage = { workspace = true, features = ["redis", "dynamodb"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
foundationdb = { workspace = true, optional = true }
