[package]
name = "webycash-server-webcash"
description = "Webcash flavor of the asset-gated server. Wire-protocol frozen against webcash.org production."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "webycash-server-webcash"
path = "src/main.rs"

[features]
default = []
fdb = ["webycash-server/fdb", "webycash-server/redis-fdb", "dep:foundationdb"]

[dependencies]
webycash-server = { workspace = true, features = ["webcash", "redis", "dynamodb"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
foundationdb = { workspace = true, optional = true }
